--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,3 @@
-@import "node_modules/spectre.css/src/spectre";
 @import 'mixins';
 
 // sizing
@@ -60,7 +59,7 @@ $snapchat: #f8ec1e;
 $global-font-size: 14px;
 $body-background: #fff;
 $body-font-color: #444444;
-$body-font-family: 'Gotham-Light';
+$body-font-family: 'sans-serif';
 
 
 // app imports
