--- a/scss/index.scss
+++ b/scss/index.scss
@@ -59,7 +59,8 @@ $snapchat: #f8ec1e;
 $global-font-size: 14px;
 $body-background: #fff;
 $body-font-color: #444444;
-$body-font-family: 'sans-serif';
+$body-font-family: 'Open Sans', sans-serif;
+$anchor-font-color: $primary;
 
 
 // app imports
