--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -125,16 +125,6 @@ q {
 	font-style: italic;
 }
 
-textarea {
-	resize: none;
-	height: $hundred;
-	box-shadow: none;
-}
-select {
-	color: #cccccc;
-	font-size: rem-calc(14px);
-	font-style: italic;
-}
 label {
 	color: $body-font-color;
 	display: inline-block;
@@ -219,6 +209,21 @@ textarea:focus {
 	border: none !important;
 }
 
+textarea {
+	resize: none;
+	height: $hundred;
+	box-shadow: none;
+	padding: $small-space ($small-space * 2);
+}
+
+
+select {
+	min-height: $input-height;
+	color: #cccccc;
+	font-size: rem-calc(14px);
+}
+
+
 // buttons
 .button,
 input[type="button"] {
@@ -290,31 +295,12 @@ input[type="button"] {
 	}
 }
 
-// if you want an icon on your select initially, use this
-.select-wrapper {
-	&:before {
-		content: '\f041';
-		font-size: 16px;
-		font-family: 'FontAwesome';
-		position: absolute;
-		left: 12px;
-		top: 7px;
-		color: #222222;
-		z-index: 10;
-	}
-
-	// pad out the select so the icon has room
-	select {
-		padding-left: 34px;
-	}
-}
 
 // apply to anything to make full width
 .full {
 	width: 100%;
 	max-width: 100%;
 }
-
 
 
 //Alignment and positioning
