--- a/scss/index.scss
+++ b/scss/index.scss
@@ -66,4 +66,6 @@ $anchor-font-color: $primary;
 // app imports
 @import 'custom';
 @import 'app';
+@import 'buttons';
+@import 'forms-elements';
 @import 'helpers';
