--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -14,15 +14,9 @@ html {
 }
 
 body {
-	background-image: url(../images/bg.jpg);
+	// if it has a background
 	background-position: center center;
 	background-repeat: repeat;
-
-	&.active {
-		position: fixed;
-		width: 100%;
-		height: 100%;
-	}
 }
 
 body, html {
@@ -36,17 +30,12 @@ body, html {
 }
 
 
+// wrap any body content in a margin
+// creates a sticky footer
 main {
 	/* flex: 1; would be enough but it looks bad in IE */
 	flex: 1 0 auto;
 }
-
-// remove underline
-:link,
-:visited {
-	text-decoration: none;
-}
-
 
 // normalise
 abbr[title],
@@ -68,9 +57,6 @@ img {
 	pointer-events: none;
 }
 
-.no-js button[type="button"] {
-	display: none;
-}
 
 // remove list points
 ul {
@@ -111,6 +97,12 @@ a:not(.button) {
 	&:visited img {
 		border: none;
 	}
+	// remove underline
+	&:link,
+	&:visited {
+		text-decoration: none;
+	}
+
 }
 
 ul li {
@@ -137,162 +129,6 @@ code {
     font-size: 85%;
     line-height: rem-calc(30);
     padding: $small-space;
-}
-
-// stop outline on focus
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-	outline: none;
-}
-
-// generic styling on input elements
-input:not([type='checkbox']):not([type='radio']):not([type='button']),
-textarea,
-select {
-	// add font awesome to font family for placeholders
-	color: $body-font-color;
-	font-family: $body-font-family;
-	font-size: rem-calc(12);
-	font-weight: 300;
-	min-height: $input-height;
-	padding: 0;
-	padding-left: ($small-space * 2);
-	border: 1px solid $light;
-	box-shadow: none;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-
-	// style placeholder
-	&::-webkit-input-placeholder {
-		color: $light;
-		font-family: 'FontAwesome', $body-font-family;
-		font-size: 13px;
-		position: relative;
-		padding: 0;
-		top: 0px;
-		transition: all, 250ms, ease-in;
-		z-index: 10;
-		line-height: normal;
-		z-index: 10;
-
-		// for safari only
-		@media only screen and (-webkit-min-device-pixel-ratio: 1) {
-			padding-top: 0px;
-			line-height: 12px;
-		}
-	}
-	// change the horrible yellow background to white in chrome
-	&:-webkit-autofill {
-		-webkit-box-shadow: 0 0 0px 1000px white inset!important;
-		border: 1px solid #ccc;
-		padding-left: ($small-space * 2);
-		color: $body-font-color;
-		font-family: $body-font-family!important;
-		font-size: 14px;
-	}
-	// hide placeholder on focus
-	&:focus::-webkit-input-placeholder{
-		color: transparent;
-	}
-}
-
-input:not([type='checkbox']):not([type='radio']):not([type='button']):focus,
-select:focus,
-textarea:focus {
-	outline: none;
-	box-shadow: 0 0 5px $light;
-	-webkit-transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
-	transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
-	border: none !important;
-}
-
-textarea {
-	resize: none;
-	height: $hundred;
-	box-shadow: none;
-	padding: $small-space ($small-space * 2);
-}
-
-
-select {
-	min-height: $input-height;
-	color: #cccccc;
-	font-size: rem-calc(14px);
-}
-
-
-// buttons
-.button,
-input[type="button"] {
-	background-color: $primary;
-	border: none;
-	color: #ffffff;
-	margin: 0;
-	padding: 12px ($small-space * 3);
-	font-size: rem-calc(13px);
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	font-weight: normal;
-	cursor: pointer;
-
-	// style focus & hover
-	&:hover, &:focus {
-		background-color: darken($primary, 10%);
-		text-decoration: none;
-		color: #ffffff;
-	}
-	&.primary {
-		@include button-bg($primary, $primaryText);
-		&.hollow {
-			@include button-hollow($primary, $primary);
-		}
-	}
-	&.darkPrimary {
-		@include button-bg($darkPrimary, $primaryText);
-		&.hollow {
-			@include button-hollow($darkPrimary, $darkPrimary);
-		}
-	}
-	&.secondary {
-		@include button-bg($secondary, $secondaryText);
-		&.hollow {
-			@include button-hollow($secondary, $secondary);
-		}
-	}
-	&.facebook {
-		@include button-bg($facebook, #ffffff);
-		&.hollow {
-			@include button-hollow($facebook, $facebook);
-		}
-	}
-	&.twitter {
-		@include button-bg($twitter, #ffffff);
-		&.hollow {
-			@include button-hollow($twitter, $twitter);
-		}
-	}
-	&.instagram {
-		@include button-bg($instagram, #ffffff);
-		&.hollow {
-			@include button-hollow($instagram, $instagram);
-		}
-	}
-	&.pinterest {
-		@include button-bg($pinterest, #ffffff);
-		&.hollow {
-			@include button-hollow($pinterest, $pinterest);
-		}
-	}
-	&.snapchat {
-		@include button-bg($snapchat, #ffffff);
-		&.hollow {
-			@include button-hollow($snapchat, $snapchat);
-		}
-	}
 }
 
 
