--- a/scss/helpers.scss
+++ b/scss/helpers.scss
@@ -1,19 +1,22 @@
 // if you want an icon on your select initially, use this
 .select-wrapper {
 	&:before {
-		content: '\f041';
-		font-size: 16px;
+		font-size: rem-calc(16);
 		font-family: 'FontAwesome';
 		position: absolute;
-		left: 12px;
-		top: 7px;
-		color: #222222;
+		left: ($small-space * 2);
+		top: $small-space;
+		color: $body-font-color;
 		z-index: 10;
+	}
+
+	&.name:before {
+		content: '\f041';
 	}
 
 	// pad out the select so the icon has room
 	select {
-		padding-left: 34px;
+		padding-left: ($small-space * 7);
 	}
 }
 
