--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -26,7 +26,8 @@ body, html {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
-	font-family: $body-font-family
+	font-family: $body-font-family;
+	font-size: $body-font-size;
 }
 
 
@@ -57,6 +58,9 @@ img {
 	pointer-events: none;
 }
 
+tr, td, th {
+	font-size: $body-font-size;
+}
 
 // remove list points
 ul {
@@ -68,7 +72,7 @@ ul {
 
 // set base paragraph size
 p {
-	font-size: rem-calc(14);
+	font-size: $body-font-size;
 	// if it's the only p contained within an element
 	&:only-child,
 	// or the last of the p's
@@ -105,8 +109,10 @@ a:not(.button) {
 
 }
 
-ul li {
+ul li,
+ol li {
 	color: $body-font-color;
+	font-size: $body-font-size;
 }
 
 // remove address styling
@@ -117,14 +123,9 @@ q {
 	font-style: italic;
 }
 
-label {
-	color: $body-font-color;
-	display: inline-block;
-}
-
 code {
     background: rgba($primary, 0.3);
-    border-radius: .1rem;
+    border-radius: $border-radius;
     color: $primary;
     font-size: 85%;
     line-height: rem-calc(30);
