--- a/scss/helpers.scss
+++ b/scss/helpers.scss
@@ -4,9 +4,9 @@
 		font-size: rem-calc(16);
 		font-family: 'FontAwesome';
 		position: absolute;
-		left: ($small-space * 2);
-		top: $small-space;
-		color: $body-font-color;
+		left: ($small-space * 3);
+		top: 8px;
+		color: $primary;
 		z-index: 10;
 	}
 
@@ -17,6 +17,28 @@
 	// pad out the select so the icon has room
 	select {
 		padding-left: ($small-space * 7);
+		padding-right: ($small-space * 3);
+    	width: 100%;
+		height: $input-height;
+	    border: 1px solid #cccccc;
+	    margin: 0 0 1.14286rem;
+	    font-size: $body-font-size;
+	    font-family: inherit;
+	    line-height: normal;
+	    color: $body-font-color;
+	    background-color: #ffffff;
+	    border-radius: 0;
+	    -webkit-appearance: none;
+	    -moz-appearance: none;
+		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32" height="24" viewBox="0 0 32 24"><polygon points="0,0 32,0 16,24" style="fill: rgb%2834, 34, 34%29"></polygon></svg>');
+	    background-size: 9px 6px;
+	    background-position: right center;
+	    background-origin: content-box;
+	    background-repeat: no-repeat;
+
+		&.rounded {
+			border-radius: $border-radius;
+		}
 	}
 }
 
@@ -60,6 +82,9 @@
 		width: 30px;
 		background: #ffffff;
 		border: 1px solid #cccccc;
+		&.rounded {
+			border-radius: $border-radius;
+		}
 		&:after {
 			content: '';
 			position: absolute;
