--- a/scss/general/_settings.scss
+++ b/scss/general/_settings.scss
@@ -62,3 +62,8 @@ $body-background: #fff;
 $body-font-color: #444444;
 $body-font-family: 'Open Sans', sans-serif;
 $anchor-font-color: $primary;
+
+// grid
+$grid-gutter: $medium-space !default;
+$grid-max-width: 1200px + ($grid-gutter * 2) !default;
+$grid-columns: 12 !default;
