--- a/scss/general/_mixins.scss
+++ b/scss/general/_mixins.scss
@@ -127,8 +127,35 @@ $large-desktop: '(min-width: 1200px)';
 $xlarge-desktop: '(min-width: 1440px)';
 
 @mixin mq($media) {
-    @media only screen and #{$media} {
-        @content;
-    }
+	@media only screen and #{$media} {
+		@content;
+	}
 }
 //@mixin mq($small)
+
+$breakpoint-small: 767px !default;
+$breakpoint-medium: 992px !default;
+$breakpoint-large: 1200px !default;
+
+$breakpoints: (
+	'xlarge' '(min-width: ' + $breakpoint-large + ')',
+	'large' '(min-width: ' + $breakpoint-medium + ') and (max-width: ' + ($breakpoint-large - 1) + ')',
+	'medium' '(min-width: ' + ($breakpoint-small + 1) + ') and (max-width:' + ($breakpoint-medium - 1) + ')',
+	'small' '(max-width: ' + $breakpoint-small + ')'
+) !default;
+
+// crete the grid
+@mixin create-grid($name) {
+	@for $i from 0 through $grid-columns {
+		@if $i != 0 {
+			.#{$name}-#{$i} {
+				flex-basis: percentage($i / $grid-columns);
+				max-width: percentage($i / $grid-columns);
+			}
+		}
+
+		.#{$name}-offset-#{$i} {
+			margin-left: percentage($i / $grid-columns);
+		}
+	}
+}
