--- a/scss/specific/_layout.scss
+++ b/scss/specific/_layout.scss
@@ -2,15 +2,16 @@
 //
 #wrapper {
 	padding: $xlarge-space;
-
 	.button {
 		margin-bottom: ($small-space * 2);
 	}
-
-	.row {
-		background-color: $light;
-		.column {
-			border: 1px solid $primary;
+	.grid {
+		margin-bottom: $large-space;
+		.row {
+			background-color: $light;
+			.column {
+				border: 1px solid $primary;
+			}
 		}
 	}
 }
