--- a/scss/general/_settings.scss
+++ b/scss/general/_settings.scss
@@ -31,6 +31,7 @@ $z-indexes: (
 	"site-footer"
 );
 
+
 // shorthand
 $primary: map-get($palette, primary);
 $primaryText: map-get($palette, primaryText);
@@ -63,7 +64,28 @@ $body-font-color: #444444;
 $body-font-family: 'Open Sans', sans-serif;
 $anchor-font-color: $primary;
 
-// grid
-$grid-gutter: $medium-space !default;
-$grid-max-width: 1200px + ($grid-gutter * 2) !default;
-$grid-columns: 12 !default;
+
+$header-sizes: (
+  small: (
+    'h1': 40,
+    'h2': 30,
+    'h3': 20,
+    'h4': 18,
+    'h5': 16,
+  ),
+  medium: (
+    'h1': 50,
+    'h2': 40,
+    'h3': 30,
+    'h4': 22,
+    'h5': 18,
+  ),
+);
+
+$breakpoints: (
+  small: 0,
+  medium: 640px,
+  large: 1024px,
+  xlarge: 1200px,
+  xxlarge: 1440px,
+);
