--- a/scss/general/_settings.scss
+++ b/scss/general/_settings.scss
@@ -60,24 +60,6 @@ $snapchat: #f8ec1e;
 // ---------
 $body-font-size: rem-calc(13);
 $body-background: #fff;
-$body-font-color: #444444;
+$body-font-color: #53596C;
 $body-font-family: 'Open Sans', sans-serif;
 $anchor-font-color: $primary;
-
-
-$header-sizes: (
-  small: (
-    'h1': 40,
-    'h2': 30,
-    'h3': 20,
-    'h4': 18,
-    'h5': 16,
-  ),
-  medium: (
-    'h1': 50,
-    'h2': 40,
-    'h3': 30,
-    'h4': 22,
-    'h5': 18,
-  ),
-);
