--- a/assets/scss/general/_custom.scss
+++ b/assets/scss/general/_custom.scss
@@ -34,6 +34,8 @@ body, html {
 	font-family: $body-font-family;
 	font-size: $body-font-size;
 	color: $body-font-color;
+	padding: 0;
+	margin: 0;
 }
 
 
