--- a/assets/scss/specific/_layout.scss
+++ b/assets/scss/specific/_layout.scss
@@ -1,11 +1,26 @@
 // site specific
 //
-#wrapper {
-	padding: $xlarge-space;
-	.button {
-		margin-bottom: ($small-space * 2);
-	}
-	.column {
-		margin-bottom: $medium-space;
-	}
+
+.button {
+	margin-bottom: ($small-space * 2);
+}
+.column {
+	margin-bottom: $medium-space;
+}
+.grid {
+	margin-bottom: $medium-space;
+	margin-top: $large-space;
+	.row {
+
+        font-size: 11px;
+        line-height: 2rem;
+        border: solid 1px #c6c6c6;
+		.columns {
+			background: #eee;
+		}
+    }
+
+    .row .columns:nth-child(even)  {
+        background: #e1e1e1;
+    }
 }
