--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,122 +1,122 @@
-@media (max-width: 767px) { .small-offset-0 { margin-left: 0% !important; }
-  .small-1 { -ms-flex-preferred-size: 8.33333% !important; flex-basis: 8.33333% !important; max-width: 8.33333% !important; }
-  .small-offset-1 { margin-left: 8.33333% !important; }
-  .small-2 { -ms-flex-preferred-size: 16.66667% !important; flex-basis: 16.66667% !important; max-width: 16.66667% !important; }
-  .small-offset-2 { margin-left: 16.66667% !important; }
-  .small-3 { -ms-flex-preferred-size: 25% !important; flex-basis: 25% !important; max-width: 25% !important; }
-  .small-offset-3 { margin-left: 25% !important; }
-  .small-4 { -ms-flex-preferred-size: 33.33333% !important; flex-basis: 33.33333% !important; max-width: 33.33333% !important; }
-  .small-offset-4 { margin-left: 33.33333% !important; }
-  .small-5 { -ms-flex-preferred-size: 41.66667% !important; flex-basis: 41.66667% !important; max-width: 41.66667% !important; }
-  .small-offset-5 { margin-left: 41.66667% !important; }
-  .small-6 { -ms-flex-preferred-size: 50% !important; flex-basis: 50% !important; max-width: 50% !important; }
-  .small-offset-6 { margin-left: 50% !important; }
-  .small-7 { -ms-flex-preferred-size: 58.33333% !important; flex-basis: 58.33333% !important; max-width: 58.33333% !important; }
-  .small-offset-7 { margin-left: 58.33333% !important; }
-  .small-8 { -ms-flex-preferred-size: 66.66667% !important; flex-basis: 66.66667% !important; max-width: 66.66667% !important; }
-  .small-offset-8 { margin-left: 66.66667% !important; }
-  .small-9 { -ms-flex-preferred-size: 75% !important; flex-basis: 75% !important; max-width: 75% !important; }
-  .small-offset-9 { margin-left: 75% !important; }
-  .small-10 { -ms-flex-preferred-size: 83.33333% !important; flex-basis: 83.33333% !important; max-width: 83.33333% !important; }
-  .small-offset-10 { margin-left: 83.33333% !important; }
-  .small-11 { -ms-flex-preferred-size: 91.66667% !important; flex-basis: 91.66667% !important; max-width: 91.66667% !important; }
-  .small-offset-11 { margin-left: 91.66667% !important; }
-  .small-12 { -ms-flex-preferred-size: 100% !important; flex-basis: 100% !important; max-width: 100% !important; }
-  .small-offset-12 { margin-left: 100% !important; } }
+@media (min-width: 0) { .small-offset-0 { margin-left: 0%; }
+  .small-1 { -webkit-box-flex: 0; -ms-flex: 0 0 8.33333%; flex: 0 0 8.33333%; max-width: 8.33333%; }
+  .small-offset-1 { margin-left: 8.33333%; }
+  .small-2 { -webkit-box-flex: 0; -ms-flex: 0 0 16.66667%; flex: 0 0 16.66667%; max-width: 16.66667%; }
+  .small-offset-2 { margin-left: 16.66667%; }
+  .small-3 { -webkit-box-flex: 0; -ms-flex: 0 0 25%; flex: 0 0 25%; max-width: 25%; }
+  .small-offset-3 { margin-left: 25%; }
+  .small-4 { -webkit-box-flex: 0; -ms-flex: 0 0 33.33333%; flex: 0 0 33.33333%; max-width: 33.33333%; }
+  .small-offset-4 { margin-left: 33.33333%; }
+  .small-5 { -webkit-box-flex: 0; -ms-flex: 0 0 41.66667%; flex: 0 0 41.66667%; max-width: 41.66667%; }
+  .small-offset-5 { margin-left: 41.66667%; }
+  .small-6 { -webkit-box-flex: 0; -ms-flex: 0 0 50%; flex: 0 0 50%; max-width: 50%; }
+  .small-offset-6 { margin-left: 50%; }
+  .small-7 { -webkit-box-flex: 0; -ms-flex: 0 0 58.33333%; flex: 0 0 58.33333%; max-width: 58.33333%; }
+  .small-offset-7 { margin-left: 58.33333%; }
+  .small-8 { -webkit-box-flex: 0; -ms-flex: 0 0 66.66667%; flex: 0 0 66.66667%; max-width: 66.66667%; }
+  .small-offset-8 { margin-left: 66.66667%; }
+  .small-9 { -webkit-box-flex: 0; -ms-flex: 0 0 75%; flex: 0 0 75%; max-width: 75%; }
+  .small-offset-9 { margin-left: 75%; }
+  .small-10 { -webkit-box-flex: 0; -ms-flex: 0 0 83.33333%; flex: 0 0 83.33333%; max-width: 83.33333%; }
+  .small-offset-10 { margin-left: 83.33333%; }
+  .small-11 { -webkit-box-flex: 0; -ms-flex: 0 0 91.66667%; flex: 0 0 91.66667%; max-width: 91.66667%; }
+  .small-offset-11 { margin-left: 91.66667%; }
+  .small-12 { -webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; }
+  .small-offset-12 { margin-left: 100%; } }
 
-@media (min-width: 768px) and (max-width: 991px) { .medium-offset-0 { margin-left: 0% !important; }
-  .medium-1 { -ms-flex-preferred-size: 8.33333% !important; flex-basis: 8.33333% !important; max-width: 8.33333% !important; }
-  .medium-offset-1 { margin-left: 8.33333% !important; }
-  .medium-2 { -ms-flex-preferred-size: 16.66667% !important; flex-basis: 16.66667% !important; max-width: 16.66667% !important; }
-  .medium-offset-2 { margin-left: 16.66667% !important; }
-  .medium-3 { -ms-flex-preferred-size: 25% !important; flex-basis: 25% !important; max-width: 25% !important; }
-  .medium-offset-3 { margin-left: 25% !important; }
-  .medium-4 { -ms-flex-preferred-size: 33.33333% !important; flex-basis: 33.33333% !important; max-width: 33.33333% !important; }
-  .medium-offset-4 { margin-left: 33.33333% !important; }
-  .medium-5 { -ms-flex-preferred-size: 41.66667% !important; flex-basis: 41.66667% !important; max-width: 41.66667% !important; }
-  .medium-offset-5 { margin-left: 41.66667% !important; }
-  .medium-6 { -ms-flex-preferred-size: 50% !important; flex-basis: 50% !important; max-width: 50% !important; }
-  .medium-offset-6 { margin-left: 50% !important; }
-  .medium-7 { -ms-flex-preferred-size: 58.33333% !important; flex-basis: 58.33333% !important; max-width: 58.33333% !important; }
-  .medium-offset-7 { margin-left: 58.33333% !important; }
-  .medium-8 { -ms-flex-preferred-size: 66.66667% !important; flex-basis: 66.66667% !important; max-width: 66.66667% !important; }
-  .medium-offset-8 { margin-left: 66.66667% !important; }
-  .medium-9 { -ms-flex-preferred-size: 75% !important; flex-basis: 75% !important; max-width: 75% !important; }
-  .medium-offset-9 { margin-left: 75% !important; }
-  .medium-10 { -ms-flex-preferred-size: 83.33333% !important; flex-basis: 83.33333% !important; max-width: 83.33333% !important; }
-  .medium-offset-10 { margin-left: 83.33333% !important; }
-  .medium-11 { -ms-flex-preferred-size: 91.66667% !important; flex-basis: 91.66667% !important; max-width: 91.66667% !important; }
-  .medium-offset-11 { margin-left: 91.66667% !important; }
-  .medium-12 { -ms-flex-preferred-size: 100% !important; flex-basis: 100% !important; max-width: 100% !important; }
-  .medium-offset-12 { margin-left: 100% !important; } }
+@media (min-width: 768px) { .medium-offset-0 { margin-left: 0%; }
+  .medium-1 { -webkit-box-flex: 0; -ms-flex: 0 0 8.33333%; flex: 0 0 8.33333%; max-width: 8.33333%; }
+  .medium-offset-1 { margin-left: 8.33333%; }
+  .medium-2 { -webkit-box-flex: 0; -ms-flex: 0 0 16.66667%; flex: 0 0 16.66667%; max-width: 16.66667%; }
+  .medium-offset-2 { margin-left: 16.66667%; }
+  .medium-3 { -webkit-box-flex: 0; -ms-flex: 0 0 25%; flex: 0 0 25%; max-width: 25%; }
+  .medium-offset-3 { margin-left: 25%; }
+  .medium-4 { -webkit-box-flex: 0; -ms-flex: 0 0 33.33333%; flex: 0 0 33.33333%; max-width: 33.33333%; }
+  .medium-offset-4 { margin-left: 33.33333%; }
+  .medium-5 { -webkit-box-flex: 0; -ms-flex: 0 0 41.66667%; flex: 0 0 41.66667%; max-width: 41.66667%; }
+  .medium-offset-5 { margin-left: 41.66667%; }
+  .medium-6 { -webkit-box-flex: 0; -ms-flex: 0 0 50%; flex: 0 0 50%; max-width: 50%; }
+  .medium-offset-6 { margin-left: 50%; }
+  .medium-7 { -webkit-box-flex: 0; -ms-flex: 0 0 58.33333%; flex: 0 0 58.33333%; max-width: 58.33333%; }
+  .medium-offset-7 { margin-left: 58.33333%; }
+  .medium-8 { -webkit-box-flex: 0; -ms-flex: 0 0 66.66667%; flex: 0 0 66.66667%; max-width: 66.66667%; }
+  .medium-offset-8 { margin-left: 66.66667%; }
+  .medium-9 { -webkit-box-flex: 0; -ms-flex: 0 0 75%; flex: 0 0 75%; max-width: 75%; }
+  .medium-offset-9 { margin-left: 75%; }
+  .medium-10 { -webkit-box-flex: 0; -ms-flex: 0 0 83.33333%; flex: 0 0 83.33333%; max-width: 83.33333%; }
+  .medium-offset-10 { margin-left: 83.33333%; }
+  .medium-11 { -webkit-box-flex: 0; -ms-flex: 0 0 91.66667%; flex: 0 0 91.66667%; max-width: 91.66667%; }
+  .medium-offset-11 { margin-left: 91.66667%; }
+  .medium-12 { -webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; }
+  .medium-offset-12 { margin-left: 100%; } }
 
-@media (min-width: 992px) { .large-offset-0 { margin-left: 0% !important; }
-  .large-1 { -ms-flex-preferred-size: 8.33333% !important; flex-basis: 8.33333% !important; max-width: 8.33333% !important; }
-  .large-offset-1 { margin-left: 8.33333% !important; }
-  .large-2 { -ms-flex-preferred-size: 16.66667% !important; flex-basis: 16.66667% !important; max-width: 16.66667% !important; }
-  .large-offset-2 { margin-left: 16.66667% !important; }
-  .large-3 { -ms-flex-preferred-size: 25% !important; flex-basis: 25% !important; max-width: 25% !important; }
-  .large-offset-3 { margin-left: 25% !important; }
-  .large-4 { -ms-flex-preferred-size: 33.33333% !important; flex-basis: 33.33333% !important; max-width: 33.33333% !important; }
-  .large-offset-4 { margin-left: 33.33333% !important; }
-  .large-5 { -ms-flex-preferred-size: 41.66667% !important; flex-basis: 41.66667% !important; max-width: 41.66667% !important; }
-  .large-offset-5 { margin-left: 41.66667% !important; }
-  .large-6 { -ms-flex-preferred-size: 50% !important; flex-basis: 50% !important; max-width: 50% !important; }
-  .large-offset-6 { margin-left: 50% !important; }
-  .large-7 { -ms-flex-preferred-size: 58.33333% !important; flex-basis: 58.33333% !important; max-width: 58.33333% !important; }
-  .large-offset-7 { margin-left: 58.33333% !important; }
-  .large-8 { -ms-flex-preferred-size: 66.66667% !important; flex-basis: 66.66667% !important; max-width: 66.66667% !important; }
-  .large-offset-8 { margin-left: 66.66667% !important; }
-  .large-9 { -ms-flex-preferred-size: 75% !important; flex-basis: 75% !important; max-width: 75% !important; }
-  .large-offset-9 { margin-left: 75% !important; }
-  .large-10 { -ms-flex-preferred-size: 83.33333% !important; flex-basis: 83.33333% !important; max-width: 83.33333% !important; }
-  .large-offset-10 { margin-left: 83.33333% !important; }
-  .large-11 { -ms-flex-preferred-size: 91.66667% !important; flex-basis: 91.66667% !important; max-width: 91.66667% !important; }
-  .large-offset-11 { margin-left: 91.66667% !important; }
-  .large-12 { -ms-flex-preferred-size: 100% !important; flex-basis: 100% !important; max-width: 100% !important; }
-  .large-offset-12 { margin-left: 100% !important; } }
+@media (min-width: 992px) { .large-offset-0 { margin-left: 0%; }
+  .large-1 { -webkit-box-flex: 0; -ms-flex: 0 0 8.33333%; flex: 0 0 8.33333%; max-width: 8.33333%; }
+  .large-offset-1 { margin-left: 8.33333%; }
+  .large-2 { -webkit-box-flex: 0; -ms-flex: 0 0 16.66667%; flex: 0 0 16.66667%; max-width: 16.66667%; }
+  .large-offset-2 { margin-left: 16.66667%; }
+  .large-3 { -webkit-box-flex: 0; -ms-flex: 0 0 25%; flex: 0 0 25%; max-width: 25%; }
+  .large-offset-3 { margin-left: 25%; }
+  .large-4 { -webkit-box-flex: 0; -ms-flex: 0 0 33.33333%; flex: 0 0 33.33333%; max-width: 33.33333%; }
+  .large-offset-4 { margin-left: 33.33333%; }
+  .large-5 { -webkit-box-flex: 0; -ms-flex: 0 0 41.66667%; flex: 0 0 41.66667%; max-width: 41.66667%; }
+  .large-offset-5 { margin-left: 41.66667%; }
+  .large-6 { -webkit-box-flex: 0; -ms-flex: 0 0 50%; flex: 0 0 50%; max-width: 50%; }
+  .large-offset-6 { margin-left: 50%; }
+  .large-7 { -webkit-box-flex: 0; -ms-flex: 0 0 58.33333%; flex: 0 0 58.33333%; max-width: 58.33333%; }
+  .large-offset-7 { margin-left: 58.33333%; }
+  .large-8 { -webkit-box-flex: 0; -ms-flex: 0 0 66.66667%; flex: 0 0 66.66667%; max-width: 66.66667%; }
+  .large-offset-8 { margin-left: 66.66667%; }
+  .large-9 { -webkit-box-flex: 0; -ms-flex: 0 0 75%; flex: 0 0 75%; max-width: 75%; }
+  .large-offset-9 { margin-left: 75%; }
+  .large-10 { -webkit-box-flex: 0; -ms-flex: 0 0 83.33333%; flex: 0 0 83.33333%; max-width: 83.33333%; }
+  .large-offset-10 { margin-left: 83.33333%; }
+  .large-11 { -webkit-box-flex: 0; -ms-flex: 0 0 91.66667%; flex: 0 0 91.66667%; max-width: 91.66667%; }
+  .large-offset-11 { margin-left: 91.66667%; }
+  .large-12 { -webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; }
+  .large-offset-12 { margin-left: 100%; } }
 
-@media (min-width: 1440px) { .xlarge-offset-0 { margin-left: 0% !important; }
-  .xlarge-1 { -ms-flex-preferred-size: 8.33333% !important; flex-basis: 8.33333% !important; max-width: 8.33333% !important; }
-  .xlarge-offset-1 { margin-left: 8.33333% !important; }
-  .xlarge-2 { -ms-flex-preferred-size: 16.66667% !important; flex-basis: 16.66667% !important; max-width: 16.66667% !important; }
-  .xlarge-offset-2 { margin-left: 16.66667% !important; }
-  .xlarge-3 { -ms-flex-preferred-size: 25% !important; flex-basis: 25% !important; max-width: 25% !important; }
-  .xlarge-offset-3 { margin-left: 25% !important; }
-  .xlarge-4 { -ms-flex-preferred-size: 33.33333% !important; flex-basis: 33.33333% !important; max-width: 33.33333% !important; }
-  .xlarge-offset-4 { margin-left: 33.33333% !important; }
-  .xlarge-5 { -ms-flex-preferred-size: 41.66667% !important; flex-basis: 41.66667% !important; max-width: 41.66667% !important; }
-  .xlarge-offset-5 { margin-left: 41.66667% !important; }
-  .xlarge-6 { -ms-flex-preferred-size: 50% !important; flex-basis: 50% !important; max-width: 50% !important; }
-  .xlarge-offset-6 { margin-left: 50% !important; }
-  .xlarge-7 { -ms-flex-preferred-size: 58.33333% !important; flex-basis: 58.33333% !important; max-width: 58.33333% !important; }
-  .xlarge-offset-7 { margin-left: 58.33333% !important; }
-  .xlarge-8 { -ms-flex-preferred-size: 66.66667% !important; flex-basis: 66.66667% !important; max-width: 66.66667% !important; }
-  .xlarge-offset-8 { margin-left: 66.66667% !important; }
-  .xlarge-9 { -ms-flex-preferred-size: 75% !important; flex-basis: 75% !important; max-width: 75% !important; }
-  .xlarge-offset-9 { margin-left: 75% !important; }
-  .xlarge-10 { -ms-flex-preferred-size: 83.33333% !important; flex-basis: 83.33333% !important; max-width: 83.33333% !important; }
-  .xlarge-offset-10 { margin-left: 83.33333% !important; }
-  .xlarge-11 { -ms-flex-preferred-size: 91.66667% !important; flex-basis: 91.66667% !important; max-width: 91.66667% !important; }
-  .xlarge-offset-11 { margin-left: 91.66667% !important; }
-  .xlarge-12 { -ms-flex-preferred-size: 100% !important; flex-basis: 100% !important; max-width: 100% !important; }
-  .xlarge-offset-12 { margin-left: 100% !important; } }
+@media (min-width: 1440px) { .xlarge-offset-0 { margin-left: 0%; }
+  .xlarge-1 { -webkit-box-flex: 0; -ms-flex: 0 0 8.33333%; flex: 0 0 8.33333%; max-width: 8.33333%; }
+  .xlarge-offset-1 { margin-left: 8.33333%; }
+  .xlarge-2 { -webkit-box-flex: 0; -ms-flex: 0 0 16.66667%; flex: 0 0 16.66667%; max-width: 16.66667%; }
+  .xlarge-offset-2 { margin-left: 16.66667%; }
+  .xlarge-3 { -webkit-box-flex: 0; -ms-flex: 0 0 25%; flex: 0 0 25%; max-width: 25%; }
+  .xlarge-offset-3 { margin-left: 25%; }
+  .xlarge-4 { -webkit-box-flex: 0; -ms-flex: 0 0 33.33333%; flex: 0 0 33.33333%; max-width: 33.33333%; }
+  .xlarge-offset-4 { margin-left: 33.33333%; }
+  .xlarge-5 { -webkit-box-flex: 0; -ms-flex: 0 0 41.66667%; flex: 0 0 41.66667%; max-width: 41.66667%; }
+  .xlarge-offset-5 { margin-left: 41.66667%; }
+  .xlarge-6 { -webkit-box-flex: 0; -ms-flex: 0 0 50%; flex: 0 0 50%; max-width: 50%; }
+  .xlarge-offset-6 { margin-left: 50%; }
+  .xlarge-7 { -webkit-box-flex: 0; -ms-flex: 0 0 58.33333%; flex: 0 0 58.33333%; max-width: 58.33333%; }
+  .xlarge-offset-7 { margin-left: 58.33333%; }
+  .xlarge-8 { -webkit-box-flex: 0; -ms-flex: 0 0 66.66667%; flex: 0 0 66.66667%; max-width: 66.66667%; }
+  .xlarge-offset-8 { margin-left: 66.66667%; }
+  .xlarge-9 { -webkit-box-flex: 0; -ms-flex: 0 0 75%; flex: 0 0 75%; max-width: 75%; }
+  .xlarge-offset-9 { margin-left: 75%; }
+  .xlarge-10 { -webkit-box-flex: 0; -ms-flex: 0 0 83.33333%; flex: 0 0 83.33333%; max-width: 83.33333%; }
+  .xlarge-offset-10 { margin-left: 83.33333%; }
+  .xlarge-11 { -webkit-box-flex: 0; -ms-flex: 0 0 91.66667%; flex: 0 0 91.66667%; max-width: 91.66667%; }
+  .xlarge-offset-11 { margin-left: 91.66667%; }
+  .xlarge-12 { -webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; }
+  .xlarge-offset-12 { margin-left: 100%; } }
 
 .container { max-width: 1280px; margin: 0 auto; }
 
-.container, .container-fluid { padding: 0 30px; }
+.container, .container-fluid { padding: 0 15px; }
 
-.row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; box-sizing: border-box; margin-left: -30px; list-style: none; -webkit-box-flex: 0; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; box-sizing: border-box; margin-left: auto; margin-right: auto; list-style: none; -webkit-box-flex: 0; -ms-flex: 0 1 auto; flex: 0 1 auto; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; max-width: 1220px; }
 
 .row.collapse { margin-left: 0; }
 
 .row.reverse { -webkit-box-orient: horizontal; -webkit-box-direction: reverse; -ms-flex-direction: row-reverse; flex-direction: row-reverse; }
 
-.column { -webkit-box-sizing: border-box; box-sizing: border-box; padding-left: 30px; padding-right: 30px; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; max-width: 100%; -ms-flex-preferred-size: 0; flex-basis: 0; -webkit-box-flex: 0; -ms-flex: 0 0 auto; flex: 0 0 auto; }
+.column, .columns { -webkit-box-sizing: border-box; box-sizing: border-box; min-width: 0; min-width: initial; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; padding-left: 15px; padding-right: 15px; }
 
-.collapse .column { padding-left: 0; }
+.collapse .column, .collapse .columns { padding-left: 0; }
 
-.column.reverse { -webkit-box-orient: vertical; -webkit-box-direction: reverse; -ms-flex-direction: column-reverse; flex-direction: column-reverse; }
+.column.reverse, .columns.reverse { -webkit-box-orient: vertical; -webkit-box-direction: reverse; -ms-flex-direction: column-reverse; flex-direction: column-reverse; }
 
 h1 { font-size: 3.92857em; }
 
@@ -138,7 +138,7 @@ html { height: 100%; }
 
 body { background-position: center center; background-repeat: repeat; }
 
-body, html { height: 100%; width: 100%; text-rendering: geometricPrecision; min-height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; font-family: "Open Sans", sans-serif; font-size: 0.92857em; color: #53596C; }
+body, html { height: 100%; width: 100%; text-rendering: geometricPrecision; min-height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; font-family: "Open Sans", sans-serif; font-size: 0.92857em; color: #53596C; padding: 0; margin: 0; }
 
 main { /* flex: 1; would be enough but it looks bad in IE */ -webkit-box-flex: 1; -ms-flex: 1 0 auto; flex: 1 0 auto; }
 
@@ -359,10 +359,16 @@ legend { font-size: 0.92857em; font-weight: 500; margin-bottom: 20px; -webkit-bo
 
 .debug * { border: 1px solid red; }
 
-#wrapper { padding: 60px; }
+.button { margin-bottom: 10px; }
 
-#wrapper .button { margin-bottom: 10px; }
+.column { margin-bottom: 20px; }
 
-#wrapper .column { margin-bottom: 20px; }
+.grid { margin-bottom: 20px; margin-top: 40px; }
+
+.grid .row { font-size: 11px; line-height: 32px; line-height: 2rem; border: solid 1px #c6c6c6; }
+
+.grid .row .columns { background: #eee; }
+
+.grid .row .columns:nth-child(even) { background: #e1e1e1; }
 
 /*# sourceMappingURL=app.css.map */
